# OrbSim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: check-version.yml  cmake.yml
doc/: main.tex  references.bib  titlepage.tex
doc/chapter1/: chapter1.tex
doc/chapter2/: chapter2.tex
doc/chapter3/: chapter3.tex
doc/chapter4/: chapter4.tex
doc/chapter5/: chapter5.tex
src/: main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  central_body.cpp  central_body.hpp  frame.cpp  frame.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  orbit.cpp  orbit.hpp  output_window.cpp  output_window.hpp  vis_obj.hpp  xyz_gizmo.cpp  xyz_gizmo.hpp
src/gui/shaders/: central_body_shaders.hpp.in  orbit_shaders.hpp.in  xyz_gizmo_shaders.hpp.in
src/gui/shaders/glsl/: central_body.frag  central_body.vert  orbit.frag  orbit.vert  xyz_gizmo.frag  xyz_gizmo.vert
src/simulation/: CMakeLists.txt  celestial_obj.hpp  diff_eq.hpp  math_obj.cpp  math_obj.hpp  satellite.cpp  satellite.hpp
src/simulation/integrators/: euler.cpp  euler.hpp  integrator.cpp  integrator.hpp  integrator_factory.cpp  integrator_factory.hpp  rk4.cpp  rk4.hpp  verlet.cpp  verlet.hpp
test/: CMakeLists.txt  test_example.cpp  test_vec3.cpp
test/simulation/: CMakeLists.txt  satellite_test.cpp  vec3_test.cpp
test/simulation/integrators/: integrator_factory_test.cpp  integrator_test.cpp
